Fixing text overlaping

--- a/public/assets/theme/css/style.css
+++ b/public/assets/theme/css/style.css
@@ -3864,3 +3864,8 @@ ol {
 		height: 320px;
 	}
 }
+@media (min-width:768px) {
+	.max-w-200{
+		max-width: 200px;
+	}
+}
